# kindle-sale-monitor

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  wishlist.example.json  wishlist.json
.github/workflows/: deploy-cloudrun.yml
app/: auth.py  config.py  database.py  main.py
app/api/: __init__.py  books.py  check.py  dashboard.py  history.py  run.py  scheduler.py  settings.py
app/models/: __init__.py  book.py  log.py  notification.py  notification_condition.py  sale_history.py  settings.py  skip_log.py
app/schemas/: book.py  dashboard.py  log.py  notification.py  notification_condition.py  sale_history.py  scheduler.py  settings.py
app/services/: browser_source.py  checker.py  condition_evaluator.py  data_source.py  firestore_client.py  firestore_repository.py  firestore_sync.py  matcher.py  notifier.py  paapi_client.py  sample_data.py  scheduler.py  scraper.py  seeder.py
app/static/css/: app.css
app/templates/: base.html  book_detail.html  book_form.html  books.html  dashboard.html  error_logs.html  history.html  login.html  monitoring_history.html  notifications.html  run_history.html  sale_history.html  settings.html
docs/: index.html
docs/ai/: 50_worker_gemini_report.md  60_worker_codex_report.md
scripts/: deploy_local_gcp.sh  run_research.py  seed_sample_data.py
tests/: test_api_books.py  test_api_dashboard.py  test_api_monitor_logs.py  test_api_price_history.py  test_api_scheduler.py  test_auth_login.py  test_browser_source.py  test_condition_evaluator.py  test_firestore_monitor_logs.py  test_firestore_sync.py  test_matcher.py  test_notifier.py  test_paapi_client.py  test_run_research_cli.py  test_sample_data.py  test_scraper.py  test_scraper_robustness.py  test_seeder.py  test_sot_724_diagnostics.py  test_web_display_only.py
tests/e2e/: conftest.py  test_dashboard_e2e.py  test_scenarios_e2e.py
tests/fixtures/: sale_bon_amazon_fallback.html  sale_bon_missing_fields.html  sale_bon_normal.html  sale_bon_structure_changed.html
