[project]
name = "kindle-sale-monitor"
version = "0.1.0"
description = "Kindle sale monitor and notifier"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.13.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.27.0",
    "beautifulsoup4>=4.12.0",
    "apscheduler>=3.10.0",
    "jinja2>=3.1.0",
    "aiofiles>=23.0.0",
    "google-cloud-firestore>=2.16.0",
    "python-multipart>=0.0.9",
    "itsdangerous>=2.1.0",
    "firebase-admin>=6.0.0",
    "playwright>=1.44.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-playwright>=0.5.0",
    "ruff>=0.4.0",
    "mypy>=1.9.0",
]

[tool.pytest.ini_options]
# 管理UIの Playwright E2E は `e2e` マーカーで分離し、既定の `pytest` 実行からは除外する（SOT-1154）。
# E2E のみ実行する場合は `pytest -m e2e`。これにより既存ユニット/統合テストはサーバ起動なしで従来通り動く。
markers = [
    "e2e: end-to-end browser tests driving the admin dashboard via pytest-playwright (requires a live server)",
]
addopts = "-m 'not e2e'"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
